# MathScript

./: .gitignore  CMakeLists.txt
include/MathScript/: Calculator.h  Exception.h  Function.h  Number.h  RandomGenerator.h  Range.h  ScriptEngine.h  SymbolTree.h
include/MathScript/Functions/: CommonFunctions.h  Constant.h  Variable.h
include/MathScript/Functions/Binary/: Exponential.h  Logarithm.h  Product.h  Quotient.h  Sum.h
include/MathScript/Functions/Trigonometric/: Cosecant.h  Cosine.h  Cotangent.h  Secant.h  Sine.h  Tangent.h
include/MathScript/Functions/Unary/: Negation.h
include/MathScript/Rendering/: Colour.h  Expression.h  ExpressionStructure.h  Font.h  FontSize.h  Image.h
include/MathScript/Rendering/Expressions/: Chain.h  Fraction.h  Integral.h  Sigma.h  Symbol.h  Text.h
src/: Calculator.cpp  Exception.cpp  Main.cpp  Range.cpp  ScriptEngine.cpp  SymbolTree.cpp
src/Functions/: Constant.cpp  Variable.cpp
src/Functions/Binary/: Exponential.cpp  Logarithm.cpp  Product.cpp  Quotient.cpp  Sum.cpp
src/Functions/Trigonometric/: Cosecant.cpp  Cosine.cpp  Cotangent.cpp  Secant.cpp  Sine.cpp  Tangent.cpp
src/Functions/Unary/: Negation.cpp
src/Rendering/: Colour.cpp  Expression.cpp  ExpressionStructure.cpp  Font.cpp  Image.cpp
src/Rendering/Expressions/: Chain.cpp  Fraction.cpp  Integral.cpp  Sigma.cpp  Symbol.cpp  Text.cpp
